2007-06-14  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/NotificationManager.cs: Hacked NotificationManager to deal
	  with media streams coming and going on pending conversations

2007-06-14  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac, data/Makefile.am, data/sounds, data/sounds/notify.wav,
	  data/sounds/banter.wav, data/sounds/Makefile.am: Added sounds
	* Banter/NotificationManager.cs: Updated NotificationManager to handle
	  additional messages coming in from a person who's chat has not been
	  accepted
	* Banter/Defines.cs.in: Added a sound directory
	* Banter/GroupWindow.cs: Added ability to say Banter when window opens

2007-06-14  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp, configure.ac, Banter/Makefile.am: Added Notify Sharp
	  dependency
	* Banter/NotificationManager.cs: New Object to handle all notifications
	  on Banter...well, this is the beginning of that
	* Banter/ChatWindowManager.cs: Removed handling of incoming
	  conversations which is now done in the notification manager
	* Banter/Application.cs: Added notification call for application wide
	  notifications
	* Banter/StatusEntry.cs: Cleaned up Notebook to hide the border
	* Banter/NotificationData.cs: New object to store Needed Notification
	  Data

2007-06-08  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: bumped the version for the next iteration

2007-06-08  Calvin Gaisford <calvinrg@gmail.com> 

	* NEWS: updated for new release 0.1.7

2007-07-08  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: bumped the version for the new iteration

2007-07-08  Calvin Gaisford <calvinrg@gmail.com> 

	* NEWS: Tagging the Banter 0.1.6 release.

2007-07-08  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/VideoView.cs: Fixed the size so it looks good
	* Banter/ChatWindow.cs: Fixed up avatar support

2007-07-08  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ChatWindow.cs: Added code to handle video if we already have
	  video stuff runnning
