@@ -78,6 +78,7 @@
     <File name="./Banter/AudioView.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/NotificationManager.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/NotificationData.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Banter/UriList.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
